<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.sample.demo.ui.MainActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_arrow"
        android:src="@drawable/arrow_left_white_grey_corner"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_header"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="@id/tv_header"
        app:layout_constraintBottom_toBottomOf="@id/tv_header"/>

    <TextView
        android:id="@+id/tv_header"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/gray10"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cart"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_carts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="8dp"
        android:paddingBottom="150dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/cl_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/rv_carts"
        app:layout_constraintBottom_toTopOf="@id/bt_checkout"
        android:background="@drawable/background_grey_rounded">

        <TextView
            android:id="@+id/tv_discount_label"
            android:textColor="@color/gray10"
            android:layout_width="0dp"
            android:text="@string/text_discount"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_total_value"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_discount_value"
            android:text="@string/value_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_discount_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_discount_label"
            app:layout_constraintHorizontal_bias="1"/>

        <TextView
            android:id="@+id/tv_total_label"
            android:textStyle="bold"
            android:textColor="@color/gray10"
            android:layout_marginTop="4dp"
            android:layout_width="0dp"
            android:text="@string/text_total"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_total_value"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_discount_label"/>
        <TextView
            android:id="@+id/tv_total_value"
            android:textStyle="bold"
            android:text="@string/value_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_total_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_total_label"
            app:layout_constraintHorizontal_bias="1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_checkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/checkout"
        android:background="@drawable/background_yellow_rounded"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
