<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TemplateFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_template"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_image"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/text_enter_name"
                android:inputType="text"
                android:background="@drawable/background_yellow_rounded"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_choose_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date"
                app:layout_constraintTop_toBottomOf="@id/datepicker"
                app:layout_constraintStart_toStartOf="parent"/>

            <AutoCompleteTextView
                android:id="@+id/act_choose_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_name"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/background_yellow_rounded"
                app:layout_constraintTop_toBottomOf="@id/tv_choose_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>